<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@color/background_container"
        android:orientation="vertical"
        app:cardCornerRadius="6dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/typeActivityItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_item">


            <TextView
                android:id="@+id/typeActivity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:hint="@string/no_tittle"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toStartOf="@+id/stopButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:hint="@string/no_comments"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeActivity" />

            <Button
                android:id="@+id/stopButton"
                style="@style/StyleButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                app:layout_constraintBottom_toBottomOf="@+id/typeActivity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/typeActivity" />

            <TextView
                android:id="@+id/dateStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment"
                tools:text="date start" />

            <TextView
                android:id="@+id/dateEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateStart"
                tools:text="date end" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>